# gitchurn

./: .gitignore  NOTES.md  README.md  gitparser.py  ir.py  main.py  setup.cfg
gitchurn/: __main__.py  gitchurn.py  gitparser.py  ir.py
