[metadata]
name = gitchurn
version = 0.0.4
author = Jason Lefever
author_email = jtl86@drexel.edu
description = A tool to calculate change churn below the file-level
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jlefever/gitchurn
project_urls =
    Source = https://github.com/jlefever/gitchurn
    Bug Tracker = https://github.com/jlefever/gitchurn/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Topic :: Software Development :: Version Control :: Git
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    gitchurn = gitchurn.__main__:main
